tests moved to separate module

--- a/pom.xml
+++ b/pom.xml
@@ -2,26 +2,26 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>reg.mavenplugins</groupId>
-  <artifactId>build-graph-maven-plugin-aggregator</artifactId>
+  <groupId>com.github.misterreg.mavenplugins</groupId>
+  <artifactId>aggregator</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <modules>
-	<module>build-graph-maven-plugin</module>
-	<module>tests</module>
+    <module>plugin</module>
+    <module>tests</module>
   </modules>
-  
-    <build>
-  <plugins>
-  <plugin>
-	  <groupId>org.apache.maven.plugins</groupId>
-	  <artifactId>maven-deploy-plugin</artifactId>
-	  <configuration>
-		<skip>true</skip>
-	  </configuration>
-	</plugin>
-	</plugins>
-	</build>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <configuration>
+          <skip>true</skip>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 
 </project>
