--- a/tests/src/test/resources/test-orch/fail-step3/pom.xml
+++ b/tests/src/test/resources/test-orch/fail-step3/pom.xml
@@ -2,7 +2,7 @@
          xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>reg</groupId>
+    <groupId>com.github.misterreg.mavenplugins</groupId>
     <artifactId>parent-failstep</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <relativePath>../parent-failstep/pom.xml</relativePath>
