--- a/tests/src/test/resources/test-orch/parent-failstep/pom.xml
+++ b/tests/src/test/resources/test-orch/parent-failstep/pom.xml
@@ -1,7 +1,7 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
          xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>reg</groupId>
+  <groupId>com.github.misterreg.mavenplugins</groupId>
   <artifactId>parent-failstep</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
